{
    "name": "MainInputActions",
    "maps": [
        {
            "name": "Mouse",
            "id": "5b6fc92f-e0c7-4232-bffe-690df94849dc",
            "actions": [
                {
                    "name": "LeftButtonClick",
                    "type": "Button",
                    "id": "1c1f642e-9a6f-4479-8c52-6851f920ff51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightButtonClick",
                    "type": "Button",
                    "id": "4478ad80-2a27-49dd-940e-2eeeb56d07cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftButtonHold",
                    "type": "Button",
                    "id": "af092eb0-0516-4bb6-a80a-768c66716b83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftButtonSlowTap",
                    "type": "Button",
                    "id": "cf86be7f-be03-4afb-99f4-e20da6e67e38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "7899356e-1ec5-44cb-b074-fd9a2954a3bd",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7bb67b8a-a472-41c9-b495-56c13b8832bf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "LeftButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7667a6a2-3620-428f-81ad-89183ec99ad4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "RightButtonClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8ad6bd4-8d84-4ccb-ac78-69fd0c296f7d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.2,pressPoint=0.2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "LeftButtonHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fe2cf45-5ba7-40e4-a7fc-19428b5e49f1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "SlowTap(duration=0.01,pressPoint=0.01)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "LeftButtonSlowTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "776a46c4-e74e-43d1-80d9-acffbc4f1261",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "1edf01dc-ecd8-42dd-8223-d9c5a3ace60d",
            "actions": [
                {
                    "name": "Ctrl",
                    "type": "Button",
                    "id": "859a030a-339a-4271-9b2f-0cd7ecf5b3a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43bba0b1-8eb2-4c63-8ed1-7608f72cc441",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ctrl",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}